Major content addition

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Welcome to Astronomy Club!
-subtitle: This site is yet to go to the moon 🚀
+subtitle: Cosmos is within us
 cover-img: /assets/img/about-us.png
 ---
 
@@ -12,4 +12,8 @@ We are a group of highly enthusiastic students from IIT Kanpur who love to appre
 
 As the name suggests, the club aims to instil in the people an interest in astronomy and nurture the interest of those who are already awed by the subject's beauty. To achieve our aim, we organise activities all round the year. From observatory sessions to planetarium shows, we try our best to attract your attention towards the sky. To give a chance to people for showing off their skills and others to learn new skills, we conduct competitions which include: spotting constellations, stars, messier objects, solving cryptic puzzles and solving astrophysics problems. For the ones who want to dig deeper in astronomy we organise summer and winter camps each year with projects ranging from building an antenna to hunting exoplanets and asteroids alongwith lecture series on various topics of astronomy and astrophysics We conduct our annual astro fest, Mandakini, which sees applicants from different colleges putting their astronomy skills to the test to win the competitions and the prizes. Have anything to share or discuss- from a moon to a black hole or even paradoxes- visit the club and we will have a group discussion right beneath the stars like our forefathers.<br><br>
 
+<div class="zoom-pic">
 <img src="{{ site.baseurl }}/assets/img/gallery3.jpg">
+</div>
+<br><br>
+<hr class="large">
