Resource tab UI fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@ We are a group of highly enthusiastic students from IIT Kanpur who love to appre
 
 <h2>What do we do</h2>
 
-As the name suggests, the club aims to instil in the people an interest in astronomy and nurture the interest of those who are already awed by the subject's beauty. To achieve our aim, we organise activities all round the year. From observatory sessions to planetarium shows, we try our best to attract your attention towards the sky. To give a chance to people for showing off their skills and others to learn new skills, we conduct competitions which include: spotting constellations, stars, messier objects, solving cryptic puzzles and solving astrophysics problems. For the ones who want to dig deeper in astronomy we organise summer and winter camps each year with projects ranging from building an antenna to hunting exoplanets and asteroids alongwith lecture series on various topics of astronomy and astrophysics We conduct our annual astro fest, Mandakini, which sees applicants from different colleges putting their astronomy skills to the test to win the competitions and the prizes. Have anything to share or discuss- from a moon to a black hole or even paradoxes- visit the club and we will have a group discussion right beneath the stars like our forefathers.<br><br>
+As the name suggests, the club aims to instil in the people an interest in astronomy and nurture the interest of those who are already awed by the subject's beauty. To achieve our aim, we organise activities all round the year. From observatory sessions to planetarium shows, we try our best to attract your attention towards the sky. To give a chance to people for showing off their skills and others to learn new skills, we conduct competitions which include: spotting constellations, stars, messier objects, solving cryptic puzzles and solving astrophysics problems. For the ones who want to dig deeper in astronomy we organise summer and winter camps each year with projects ranging from building an antenna to hunting exoplanets and asteroids alongwith lecture series on various topics of astronomy and astrophysics We conduct our annual astro fest, Mandakini, which sees applicants from different colleges putting their astronomy skills to the test to win the competitions and the prizes. Have anything to share or discuss- from a moon to a black hole or even paradoxes- visit the club and we will have a group discussion right beneath the stars like our forefathers. Summarising in points, we conduct:-
+
+<ol>
+<li><h4>Astronomy Observation Sessions</h4>
+We hold Observation sessions regularly. In these sessions, telescope will be used for observing Moon, nebulae, planets like Saturn etc. However, naked eye observations and using binoculars also plays an important role in astronomy. Informal session involving small quizzes and general discussions.</li>
+<li>
+<h4>Planetarium Shows</h4>
+We are proud to have our own inhouse planetarium built entirely by students. The planetarium was inaugurated on Jan 29th, 2012, and still stands to marvel the dedication of the students who built it. Today we host various planetarium shows, some of which are made by the students themselves.</li>
+<li>
+<h4>Astrophotography</h4>
+To the uninitiated, nothing could be more logical than afocal photography: if you look through a telescope's eyepiece, why wouldn't you point a camera into it? The club has its own SLR camera which is used for various photometrical projects.</li>
+
+<li>
+<h4>The Observatory for Astronomical Research (OAAR)</h4>
+Astronomy Club, ITK, has built its own observatory for astronomical research. It hosts a mammoth 14 inch Celestron EdgeHD, which brings the Heavens down to earth. The observatory was inaugurated in Summers '14. It is currently open for observations.</li>
+</ol>
 
 <div class="zoom-pic">
 <img src="{{ site.baseurl }}/assets/img/gallery3.jpg">
