📺 Fix aspect ratio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ To the uninitiated, nothing could be more logical than afocal photography: if yo
 
 <li>
 <h4>Observatory for Astronomical Research (OAAR)</h4>
-Astronomy Club, ITK, has built its own observatory for astronomical research. It hosts a mammoth 14 inch Celestron EdgeHD, which brings the Heavens down to earth. The observatory was inaugurated in Summers '14. It is currently open for observations.</li>
+Astronomy Club, IITK, has built its own observatory for astronomical research. It hosts a mammoth 14 inch Celestron EdgeHD, which brings the Heavens down to earth. The observatory was inaugurated in Summers '14. It is currently open for observations.</li>
 </ol>
 
 <div class="zoom-pic">
