--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ cover-img: /assets/img/about-us.png
 <h1>Who are we ?</h1>
 We are a group of highly enthusiastic students from IIT Kanpur who love to appreciate the beauty of the cosmos. Not all of us have formal background in astronomy, but we are passionate about what our universe has to offer. The club is open to all the students: from the freshers to the final years and from the post-graduates to the ones doing their PhDs. The club consists of not only Physics majors but students across all departments. All you need is just a little interest in the stars and not even that, spend time with us and we'll make sure that you will fall in love with the cosmos because you yourself are made of stardust. So, even if you think that variable stars are demons trapped in a mysterious realm or that comets are omens of that war, we invite you to come and join us.
 
-<h2>What do we do ?</h2>
+<h1>What do we do ?</h1>
 
 As the name suggests, the club aims to instil in the people an interest in astronomy and nurture the interest of those who are already awed by the subject's beauty. To achieve our aim, we organise activities all round the year. From observatory sessions to planetarium shows, we try our best to attract your attention towards the sky. To give a chance to people for showing off their skills and others to learn new skills, we conduct competitions which include: spotting constellations, stars, messier objects, solving cryptic puzzles and solving astrophysics problems. For the ones who want to dig deeper in astronomy we organise summer and winter camps each year with projects ranging from building an antenna to hunting exoplanets and asteroids alongwith lecture series on various topics of astronomy and astrophysics We conduct our annual astro fest, Mandakini, which sees applicants from different colleges putting their astronomy skills to the test to win the competitions and the prizes. Have anything to share or discuss- from a moon to a black hole or even paradoxes- visit the club and we will have a group discussion right beneath the stars like our forefathers. Summarising in points, we conduct:-
 
@@ -31,4 +31,13 @@ Astronomy Club, IITK, has built its own observatory for astronomical research. I
 <img src="{{ site.baseurl }}/assets/img/gallery3.jpg">
 </div>
 <br><br>
+
+<hr class="large">
+<h1>Monthly Newsletter 📰</h1>
+<ol>
+    <h3>Issue #1 : October 2021 [<a href="{{ site.baseurl }}/assets/docs/Astro_Newsletter_1.pdf" target="_blank">Read here</a>]</h3>
+    <h3>Issue #2 : November 2021 [<a href="#">Soon</a>]</h3>
+</ol>
+<br>
+
 <hr class="large">
