--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Astronomy Club, IITK, has built its own observatory for astronomical research. I
 <h1>Monthly Newsletter 📰</h1>
 <ol>
     <h3>Issue #1 : October 2021 [<a href="{{ site.baseurl }}/assets/docs/Astro_Newsletter_1.pdf" target="_blank">Read here</a>]</h3>
-    <h3>Issue #2 : November 2021 [<a href="#">Soon</a>]</h3>
+    <h3>Issue #2 : November 2021 [<a href="{{ site.baseurl }}/assets/docs/Astro_Newsletter_2.pdf" target="_blank">Read here</a>]</h3>
 </ol>
 <br>
 
