--- a/index.html
+++ b/index.html
@@ -33,11 +33,24 @@ Astronomy Club, IITK, has built its own observatory for astronomical research. I
 <br><br>
 
 <hr class="large">
+<h1>Cygnus: First Edition 🌠</h1>
+<br>
+Astronomy Club IITK proudly releases the first edition of its annual astronomy magazine, <b><em>Cygnus</em></b>. The magazine would be a nice treat to anyone even mildly interested in Astronomy and also for the unfamiliar to gain a quick initial exposure. 
+<br><br>
+<!-- <iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 368px;" src="https://heyzine.com/flip-book/99a5d96ef8.html"></iframe> -->
+<iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 600px;" src="https://heyzine.com/flip-book/99a5d96ef8.html"></iframe>
+<br>
+
+<hr class="large">
 <h1>Monthly Newsletter 📰</h1>
+<br>
+Astro Club brings to you its newly minted monthly newsletter series detailing the recent happenings from the world of astronomy. Read more to find out about new space launches, cutting-edge research, and exciting future events to look forward to.
 <ol>
     <h3>Issue #1 : October 2021 [<a href="{{ site.baseurl }}/assets/docs/Astro_Newsletter_1.pdf" target="_blank">Read here</a>]</h3>
     <h3>Issue #2 : November 2021 [<a href="{{ site.baseurl }}/assets/docs/Astro_Newsletter_2.pdf" target="_blank">Read here</a>]</h3>
 </ol>
 <br>
+
+<!-- <object data="{{ site.baseurl }}/assets/docs/Astro_Newsletter_1.pdf" width="100%" height="600px;" type='application/pdf'></object> -->
 
 <hr class="large">
