--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ As the name suggests, the club aims to instil in the people an interest in astro
 
 <ol>
 <li><h4>Astronomy Observation Sessions</h4>
-We hold Observation sessions regularly. In these sessions, telescope will be used for observing Moon, nebulae, planets like Saturn etc. However, naked eye observations and using binoculars also plays an important role in astronomy. Informal session involving small quizzes and general discussions.</li>
+We hold observation sessions regularly. In these sessions, telescope will be used for observing Moon, nebulae, planets like Saturn etc. However, naked eye observations and using binoculars also plays an important role in astronomy. Informal session involving small quizzes and general discussions.</li>
 <li>
 <h4>Planetarium Shows</h4>
 We are proud to have our own inhouse planetarium built entirely by students. The planetarium was inaugurated on Jan 29th, 2012, and still stands to marvel the dedication of the students who built it. Today we host various planetarium shows, some of which are made by the students themselves.</li>
@@ -48,6 +48,7 @@ Astro Club brings to you its newly minted monthly newsletter series detailing th
 <ol>
     <h3>Issue #1 : October 2021 [<a href="{{ site.baseurl }}/assets/docs/Astro_Newsletter_1.pdf" target="_blank">Read here</a>]</h3>
     <h3>Issue #2 : November 2021 [<a href="{{ site.baseurl }}/assets/docs/Astro_Newsletter_2.pdf" target="_blank">Read here</a>]</h3>
+    <h3>Issue #3 : TBA</h3>
 </ol>
 <br>
 
