update home banner image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 title: Welcome to Astronomy Club!
 subtitle: Cosmos is within us
-cover-img: /assets/img/about-us.png
+cover-img: /assets/img/clubroom-blue.jpeg
 ---
 
 <h1>Who are we ?</h1>
