--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Astro Club brings to you its newly minted monthly newsletter series detailing th
 <ol>
     <h3>Issue #1 : October 2021 [<a href="{{ site.baseurl }}/assets/docs/Astro_Newsletter_1.pdf" target="_blank">Read here</a>]</h3>
     <h3>Issue #2 : November 2021 [<a href="{{ site.baseurl }}/assets/docs/Astro_Newsletter_2.pdf" target="_blank">Read here</a>]</h3>
-    <h3>Issue #3 : TBA</h3>
+    <!-- <h3>Issue #3 : TBA</h3> -->
 </ol>
 <br>
 
