update OAAR image link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Astronomy Club, IITK, has built its own observatory for astronomical research. I
 </ol>
 
 <div class="zoom-pic">
-<img src="{{ site.baseurl }}/assets/img/gallery3.jpg">
+<img src="{{ site.baseurl }}/assets/img/gallery/4.jpg">
 </div>
 <br><br>
 
