add Cygnus 2021 PDF

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ Astronomy Club IITK proudly releases the first edition of its annual astronomy m
 <br><br>
 <!-- <iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 368px;" src="https://heyzine.com/flip-book/99a5d96ef8.html"></iframe> -->
 <iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 600px;" src="https://heyzine.com/flip-book/99a5d96ef8.html"></iframe>
+<br><br>
+Download the PDF <a href="./assets/docs/magazine/Cygnus-2021.pdf" target="_blank">here</a>. Or simply visit the clubroom :)
 <br>
 
 <hr class="large">
