add basic booking UI

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@ We hold observation sessions regularly. In these sessions, telescope will be use
 <li>
 <h4>Planetarium Shows</h4>
 We are proud to have our own inhouse planetarium built entirely by students. The planetarium was inaugurated on Jan 29th, 2012, and still stands to marvel the dedication of the students who built it. Today we host various planetarium shows, some of which are made by the students themselves.</li>
+
+<!-- <ul class="pagination blog-pager resource-btn">
+    <li class="page-item">
+        <a class="page-link" href="/planetarium" data-toggle="tooltip" data-placement="top" >Book Now</a>
+    </li>
+</ul> -->
+
 <li>
 <h4>Astrophotography</h4>
 To the uninitiated, nothing could be more logical than afocal photography: if you look through a telescope's eyepiece, why wouldn't you point a camera into it? The club has its own SLR camera which is used for various photometrical projects.</li>
