--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ We hold observation sessions regularly. In these sessions, telescope will be use
 <h4>Planetarium Shows</h4>
 We are proud to have our own inhouse planetarium built entirely by students. The planetarium was inaugurated on Jan 29th, 2012, and still stands to marvel the dedication of the students who built it. Today we host various planetarium shows, some of which are made by the students themselves.</li>
 
-<!-- <ul class="pagination blog-pager resource-btn">
+<ul class="pagination blog-pager resource-btn">
     <li class="page-item">
         <a class="page-link" href="/planetarium" data-toggle="tooltip" data-placement="top" >Book Now</a>
     </li>
-</ul> -->
+</ul>
 
 <li>
 <h4>Astrophotography</h4>
