--- a/team.html
+++ b/team.html
@@ -42,14 +42,34 @@ subtitle: Free free to contact any of us!
     </div>
   </div>
 
-<!-- <h3 style="text-align: center;">Secretaries (2021-22)</h3><br>
+<h3 style="text-align: center;">Secretaries (2022-23)</h3><br>
 
 <div class="container pt-6 pb-6">
     <div class="row pt-6 pb-6">
         <ol>
+            <li>Aayushman Gupta</li>
+            <li>Abhinav Singhal</li>
+            <li>Antriksh Gupta</li>
+            <li>Anushree Shukla</li>
+            <li>Arnav Karipae</li>
+            <li>Ashmit Bathla</li>
+            <li>Eesh Naugraiya</li>
+            <li>Himanshu Mittal</li>
+            <li>Kaustubh Jha</li>
+            <li>Manas Pandey</li>
+            <li>Manjusree Nayak</li>
+            <li>Neerav Sethi</li>
+            <li>Princy Chauhan</li>
+            <li>Ritik Kumar</li>
+            <li>Shreya Rajak</li>
+            <li>Shrilakshmi</li>
+            <li>Soumya Chaturvedi</li>
+            <li>Suryansh Gaur</li>
+            <li>Vaishnavi Singh</li>
+            <li>Yogit</li>
         </ol>
     </div>
-</div> -->
+</div>
 
 <h3 style="text-align: center;">Ex-Coordinators (2021-22)</h3><br>
 
