add observatory link

--- a/index.html
+++ b/index.html
@@ -31,8 +31,17 @@ To the uninitiated, nothing could be more logical than afocal photography: if yo
 
 <li>
 <h4>Observatory for Astronomical Research (OAAR)</h4>
-Astronomy Club, IITK, has built its own observatory for astronomical research. It hosts a mammoth <b>14 inch Celestron EdgeHD</b>, which brings the Heavens down to earth. The observatory was inaugurated in Summers '14. It is currently open for observations.</li>
+Astronomy Club, IITK, has built its own observatory for astronomical research. It hosts a mammoth <b>14 inch Celestron EdgeHD</b>, which brings the Heavens down to earth. The observatory was inaugurated in Summers '14. It is currently open for observations.
+
+<ul class="pagination blog-pager resource-btn">
+    <li class="page-item">
+        <a class="page-link" href="/resources/observatory" data-toggle="tooltip" data-placement="top" >View Photos</a>
+    </li>
+</ul>
+
+</li>
 </ol>
+
 
 <div class="zoom-pic">
 <img src="{{ site.baseurl }}/assets/img/gallery/4.jpg">
