--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Our Team
-subtitle: Free free to contact any of us!
+subtitle: Feel free to contact any of us!
 ---
 <h3 style="text-align: center;">Current Coordinators (2023-24)</h3><br>
 
