--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle: Cosmos is within us
 cover-img: /assets/img/banner/index.jpeg
 ---
 
-<h1>Who are we ?</h1>
+<h1>Who we are ?</h1>
 We are a group of highly enthusiastic students from IIT Kanpur who love to appreciate the beauty of the cosmos. Not all of us have formal background in astronomy, but we are passionate about what our universe has to offer. The club is open to all the students: from the freshers to the final years and from the post-graduates to the ones doing their PhDs. The club consists of not only Physics majors but students across all departments. All you need is just a little interest in the stars and not even that, spend time with us and we'll make sure that you will fall in love with the cosmos because you yourself are made of stardust. So, even if you think that variable stars are demons trapped in a mysterious realm or that comets are omens of that war, we invite you to come and join us.
 
 <h1>What do we do ?</h1>
