--- a/team.html
+++ b/team.html
@@ -41,6 +41,40 @@ subtitle: Feel free to contact any of us!
     </div>
   </div>
 
+<h3 style="text-align: center;">Secretaries (2023-24)</h3><br>
+
+<div class="container pt-6 pb-6">
+    <div class="row pt-6 pb-6">
+        <ol>
+            <li>Aatif Hasan</li>
+            <li>Aditi Singh</li>
+            <li>Akshita Agarwal</li>
+            <li>Aniket Singh Choudhary</li>
+            <li>Anushri Bhargawa</li>
+            <li>Arpita Chaurasia</li>
+            <li>Arram Siri Chandana</li>
+            <li>Arya Soratel</li>
+            <li>Astitva Roy</li>
+            <li>Ayush Bokad</li>
+            <li>Harshit Kumar</li>
+            <li>K C Samhitha</li>
+            <li>Mehek Agarwal</li>
+            <li>Mohit Rajpoot</li>
+            <li>Naman Agarwal</li>
+            <li>Nilay Agarwal</li>
+            <li>Paaritosh Jainl</li>
+            <li>Shivam Lal</li>
+            <li>Siddhant Lalpuria</li>
+            <li>Sohel Saini</li>
+            <li>Sujal Jain</li>
+            <li>Tanish Singla</li>
+            <li>Amar Sathwik Thogiti</li>
+            <li>Vanshika Yadav </li>
+            <li>Yeleena Vimal</li>
+        </ol>
+    </div>
+</div>
+
 <h3 style="text-align: center;">Ex-Coordinators (2022-23)</h3><br>
 
 <div class="container pt-6 pb-6">
