--- a/index.html
+++ b/index.html
@@ -6,61 +6,120 @@ cover-img: /assets/img/banner/index.jpeg
 ---
 
 <h1>Who we are ?</h1>
-We are a group of highly enthusiastic students from IIT Kanpur who love to appreciate the beauty of the cosmos. Not all of us have formal background in astronomy, but we are passionate about what our universe has to offer. The club is open to all the students: from the freshers to the final years and from the post-graduates to the ones doing their PhDs. The club consists of not only Physics majors but students across all departments. All you need is just a little interest in the stars and not even that, spend time with us and we'll make sure that you will fall in love with the cosmos because you yourself are made of stardust. So, even if you think that variable stars are demons trapped in a mysterious realm or that comets are omens of that war, we invite you to come and join us.
+We are a group of highly enthusiastic students from IIT Kanpur who love to
+appreciate the beauty of the cosmos. Not all of us have formal background in
+astronomy, but we are passionate about what our universe has to offer. The club
+is open to all the students: from the freshers to the final years and from the
+post-graduates to the ones doing their PhDs. The club consists of not only
+Physics majors but students across all departments. All you need is just a
+little interest in the stars and not even that, spend time with us and we'll
+make sure that you will fall in love with the cosmos because you yourself are
+made of stardust. So, even if you think that variable stars are demons trapped
+in a mysterious realm or that comets are omens of that war, we invite you to
+come and join us.
 
 <h1>What do we do ?</h1>
 
-As the name suggests, the club aims to instil in the people an interest in astronomy and nurture the interest of those who are already awed by the subject's beauty. To achieve our aim, we organise activities all round the year. From observatory sessions to planetarium shows, we try our best to attract your attention towards the sky. To give a chance to people for showing off their skills and others to learn new skills, we conduct competitions which include: spotting constellations, stars, messier objects, solving cryptic puzzles and solving astrophysics problems. For the ones who want to dig deeper in astronomy we organise summer and winter camps each year with projects ranging from building an antenna to hunting exoplanets and asteroids alongwith lecture series on various topics of astronomy and astrophysics We conduct our annual astro fest, Mandakini, which sees applicants from different colleges putting their astronomy skills to the test to win the competitions and the prizes. Have anything to share or discuss- from a moon to a black hole or even paradoxes- visit the club and we will have a group discussion right beneath the stars like our forefathers. Summarising in points, we conduct:-
+As the name suggests, the club aims to instil in the people an interest in
+astronomy and nurture the interest of those who are already awed by the
+subject's beauty. To achieve our aim, we organise activities all round the year.
+From observatory sessions to planetarium shows, we try our best to attract your
+attention towards the sky. To give a chance to people for showing off their
+skills and others to learn new skills, we conduct competitions which include:
+spotting constellations, stars, messier objects, solving cryptic puzzles and
+solving astrophysics problems. For the ones who want to dig deeper in astronomy
+we organise summer and winter camps each year with projects ranging from
+building an antenna to hunting exoplanets and asteroids alongwith lecture series
+on various topics of astronomy and astrophysics We conduct our annual astro
+fest, Mandakini, which sees applicants from different colleges putting their
+astronomy skills to the test to win the competitions and the prizes. Have
+anything to share or discuss- from a moon to a black hole or even paradoxes-
+visit the club and we will have a group discussion right beneath the stars like
+our forefathers. Summarising in points, we conduct:-
 
 <ol>
-<li><h4>Astronomy Observation Sessions</h4>
-We hold observation sessions regularly. In these sessions, telescope will be used for observing Moon, nebulae, planets like Saturn etc. However, naked eye observations and using binoculars also plays an important role in astronomy. Informal session involving small quizzes and general discussions.</li>
-<li>
-<h4>Planetarium Shows</h4>
-We are proud to have our own inhouse planetarium built entirely by students. The planetarium was inaugurated on Jan 29th, 2012, and still stands to marvel the dedication of the students who built it. Today we host various planetarium shows, some of which are made by the students themselves.</li>
+  <li>
+    <h4>Astronomy Observation Sessions</h4>
+    We hold observation sessions regularly. In these sessions, telescope will be
+    used for observing Moon, nebulae, planets like Saturn etc. However, naked
+    eye observations and using binoculars also plays an important role in
+    astronomy. Informal session involving small quizzes and general discussions.
+  </li>
+  <li>
+    <h4>Planetarium Shows</h4>
+    We are proud to have our own inhouse planetarium built entirely by students.
+    The planetarium was inaugurated on Jan 29th, 2012, and still stands to
+    marvel the dedication of the students who built it. Today we host various
+    planetarium shows, some of which are made by the students themselves.
+  </li>
 
-<ul class="pagination blog-pager resource-btn">
+  <ul class="pagination blog-pager resource-btn">
     <li class="page-item">
-        <a class="page-link" href="/planetarium" data-toggle="tooltip" data-placement="top" >Book Now</a>
+      <a
+        class="page-link"
+        href="/planetarium"
+        data-toggle="tooltip"
+        data-placement="top"
+        >Book Now</a
+      >
     </li>
-</ul>
+  </ul>
 
-<li>
-<h4>Astrophotography</h4>
-To the uninitiated, nothing could be more logical than afocal photography: if you look through a telescope's eyepiece, why wouldn't you point a camera into it? The club has its own SLR camera which is used for various photometrical projects.</li>
+  <li>
+    <h4>Astrophotography</h4>
+    To the uninitiated, nothing could be more logical than afocal photography:
+    if you look through a telescope's eyepiece, why wouldn't you point a camera
+    into it? The club has its own SLR camera which is used for various
+    photometrical projects.
+  </li>
 
-<li>
-<h4>Observatory for Astronomical Research (OAAR)</h4>
-Astronomy Club, IITK, has built its own observatory for astronomical research. It hosts a mammoth <b>14 inch Celestron EdgeHD</b>, which brings the Heavens down to earth. The observatory was inaugurated in Summers '14. It is currently open for observations.
+  <li>
+    <h4>Observatory for Astronomical Research (OAAR)</h4>
+    Astronomy Club, IITK, has built its own observatory for astronomical
+    research. It hosts a mammoth <b>14 inch Celestron EdgeHD</b>, which brings
+    the Heavens down to earth. The observatory was inaugurated in Summers '14.
+    It is currently open for observations.
 
-<ul class="pagination blog-pager resource-btn">
-    <li class="page-item">
-        <a class="page-link" href="/resources/observatory" data-toggle="tooltip" data-placement="top" >View Photos</a>
-    </li>
-</ul>
-
-</li>
+    <ul class="pagination blog-pager resource-btn">
+      <li class="page-item">
+        <a
+          class="page-link"
+          href="/resources/observatory"
+          data-toggle="tooltip"
+          data-placement="top"
+          >View Photos</a
+        >
+      </li>
+    </ul>
+  </li>
 </ol>
 
-
 <div class="zoom-pic">
-<img src="{{ site.baseurl }}/assets/img/gallery/4.jpg">
+  <img loading="lazy" src="{{ site.baseurl }}/assets/img/gallery/4.jpg" />
 </div>
-<br><br>
+<br /><br />
 
-<hr class="large">
+<hr class="large" />
 <h1>Cygnus: First Edition 🌠</h1>
-<br>
+<br />
 
-Astronomy Club IITK proudly releases its annual astronomy magazine, Cygnus every year. The magazines would be a nice treat to anyone even mildly interested in Astronomy and also for the unfamiliar to gain a quick initial exposure.
+Astronomy Club IITK proudly releases its annual astronomy magazine, Cygnus every
+year. The magazines would be a nice treat to anyone even mildly interested in
+Astronomy and also for the unfamiliar to gain a quick initial exposure.
 
-<br><br>
+<br /><br />
 <ul class="pagination blog-pager resource-btn">
-    <li class="page-item">
-        <a class="page-link" href="/resources/cygnus" data-toggle="tooltip" data-placement="top" >Read Now</a>
-    </li>
+  <li class="page-item">
+    <a
+      class="page-link"
+      href="/resources/cygnus"
+      data-toggle="tooltip"
+      data-placement="top"
+      >Read Now</a
+    >
+  </li>
 </ul>
-<br>
+<br />
 
 <!-- <hr class="large">
 <h1>Monthly Newsletter 📰</h1>
@@ -75,4 +134,4 @@ Astro Club brings to you its newly minted monthly newsletter series detailing th
 
 <!-- <object data="{{ site.baseurl }}/assets/docs/Astro_Newsletter_1.pdf" width="100%" height="600px;" type='application/pdf'></object> -->
 
-<hr class="large">
+<hr class="large" />
