--- a/team.html
+++ b/team.html
@@ -3,188 +3,258 @@ layout: page
 title: Our Team
 subtitle: Feel free to contact any of us!
 ---
-<h3 style="text-align: center;">Current Coordinators (2023-24)</h3><br>
+
+<h3 style="text-align: center">Current Coordinators (2023-24)</h3>
+<br />
 
 <div class="container pt-6 pb-6">
-    <div class="row pt-6 pb-6">
-        {% for member in site.team %}
-            {% if member.batch == "Y21" %}
-                <div class="col-12 col-md-6 mb-2">
-                    <div class="card border-0">
-                        {% if member.image_path %}
-                        <img alt="{{ member.name }}" class="img-fluid mb-2 card-img-top" src="{{ site.baseurl }}{{ member.image_path }}" />
-                        {% endif %}
-                        <div class="card-body text-center" style="padding: 0px;">
-                            <h4 class="card-title mb-0" style="padding-bottom: 10px; margin: 10px;">{{ member.name }}</h4>
-                            <h6 class="card-text">{{ member.batch }} {{ member.info }}</h6>
-                            <ul class="list-inline text-center" style="margin: 0;">
-                                <li class="list-inline-item">
-                                <a target="_blank" href="https://facebook.com/{{ member.facebook }}" title="Facebook">
-                                    <span class="fa-stack fa-lg" aria-hidden="true">
-                                    <i class="fab fa-facebook fa-stack-1x"></i>
-                                    </span>
-                                </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a target="_blank" href="https://instagram.com/{{ member.insta }}" title="Instagram">
-                                        <span class="fa-stack fa-lg" aria-hidden="true">
-                                        <i class="fab fa-instagram fa-stack-1x"></i>
-                                        </span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>                
-                    </div>
-                </div>
-            {% endif %}
-        {% endfor %}
+  <div class="row pt-6 pb-6">
+    {% for member in site.team %} {% if member.batch == "Y21" %}
+    <div class="col-12 col-md-6 mb-2">
+      <div class="card border-0">
+        {% if member.image_path %}
+        <img
+          loading="lazy"
+          alt="{{ member.name }}"
+          class="img-fluid mb-2 card-img-top"
+          src="{{ site.baseurl }}{{ member.image_path }}"
+        />
+        {% endif %}
+        <div class="card-body text-center" style="padding: 0px">
+          <h4
+            class="card-title mb-0"
+            style="padding-bottom: 10px; margin: 10px"
+          >
+            {{ member.name }}
+          </h4>
+          <h6 class="card-text">{{ member.batch }} {{ member.info }}</h6>
+          <ul class="list-inline text-center" style="margin: 0">
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://facebook.com/{{ member.facebook }}"
+                title="Facebook"
+              >
+                <span class="fa-stack fa-lg" aria-hidden="true">
+                  <i class="fab fa-facebook fa-stack-1x"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://instagram.com/{{ member.insta }}"
+                title="Instagram"
+              >
+                <span class="fa-stack fa-lg" aria-hidden="true">
+                  <i class="fab fa-instagram fa-stack-1x"></i>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
+    {% endif %} {% endfor %}
   </div>
-
-<h3 style="text-align: center;">Secretaries (2023-24)</h3><br>
-
-<div class="container pt-6 pb-6">
-    <div class="row pt-6 pb-6">
-        <ol>
-            <li>Aatif Hasan</li>
-            <li>Aditi Singh</li>
-            <li>Akshita Agarwal</li>
-            <li>Aniket Singh Choudhary</li>
-            <li>Anushri Bhargawa</li>
-            <li>Arpita Chaurasia</li>
-            <li>Arram Siri Chandana</li>
-            <li>Arya Soratel</li>
-            <li>Astitva Roy</li>
-            <li>Ayush Bokad</li>
-            <li>Harshit Kumar</li>
-            <li>K C Samhitha</li>
-            <li>Mehek Agarwal</li>
-            <li>Mohit Rajpoot</li>
-            <li>Naman Agarwal</li>
-            <li>Nilay Agarwal</li>
-            <li>Paaritosh Jainl</li>
-            <li>Shivam Lal</li>
-            <li>Siddhant Lalpuria</li>
-            <li>Sohel Saini</li>
-            <li>Sujal Jain</li>
-            <li>Tanish Singla</li>
-            <li>Amar Sathwik Thogiti</li>
-            <li>Vanshika Yadav </li>
-            <li>Yeleena Vimal</li>
-        </ol>
-    </div>
 </div>
 
-<h3 style="text-align: center;">Ex-Coordinators (2022-23)</h3><br>
+<h3 style="text-align: center">Secretaries (2023-24)</h3>
+<br />
 
 <div class="container pt-6 pb-6">
-    <div class="row pt-6 pb-6">
-        {% for member in site.team %}
-            {% if member.batch == "Y20" %}
-                <div class="col-12 col-md-6 mb-2">
-                    <div class="card border-0">
-                        {% if member.image_path %}
-                        <img alt="{{ member.name }}" class="img-fluid mb-2 card-img-top" src="{{ site.baseurl }}{{ member.image_path }}" />
-                        {% endif %}
-                        <div class="card-body text-center" style="padding: 0px;">
-                            <h4 class="card-title mb-0" style="padding-bottom: 10px; margin: 10px;">{{ member.name }}</h4>
-                            <h6 class="card-text">{{ member.batch }} {{ member.info }}</h6>
-                            <ul class="list-inline text-center" style="margin: 0;">
-                                <li class="list-inline-item">
-                                <a target="_blank" href="https://facebook.com/{{ member.facebook }}" title="Facebook">
-                                    <span class="fa-stack fa-lg" aria-hidden="true">
-                                    <i class="fab fa-facebook fa-stack-1x"></i>
-                                    </span>
-                                </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a target="_blank" href="https://instagram.com/{{ member.insta }}" title="Instagram">
-                                        <span class="fa-stack fa-lg" aria-hidden="true">
-                                        <i class="fab fa-instagram fa-stack-1x"></i>
-                                        </span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>                
-                    </div>
-                </div>
-            {% endif %}
-        {% endfor %}
-    </div>
+  <div class="row pt-6 pb-6">
+    <ol>
+      <li>Aatif Hasan</li>
+      <li>Aditi Singh</li>
+      <li>Akshita Agarwal</li>
+      <li>Aniket Singh Choudhary</li>
+      <li>Anushri Bhargawa</li>
+      <li>Arpita Chaurasia</li>
+      <li>Arram Siri Chandana</li>
+      <li>Arya Soratel</li>
+      <li>Astitva Roy</li>
+      <li>Ayush Bokad</li>
+      <li>Harshit Kumar</li>
+      <li>K C Samhitha</li>
+      <li>Mehek Agarwal</li>
+      <li>Mohit Rajpoot</li>
+      <li>Naman Agarwal</li>
+      <li>Nilay Agarwal</li>
+      <li>Paaritosh Jainl</li>
+      <li>Shivam Lal</li>
+      <li>Siddhant Lalpuria</li>
+      <li>Sohel Saini</li>
+      <li>Sujal Jain</li>
+      <li>Tanish Singla</li>
+      <li>Amar Sathwik Thogiti</li>
+      <li>Vanshika Yadav</li>
+      <li>Yeleena Vimal</li>
+    </ol>
   </div>
-
-<h3 style="text-align: center;">Ex-Coordinators (2021-22)</h3><br>
-
-<div class="container pt-6 pb-6">
-    <div class="row pt-6 pb-6">
-        {% for member in site.team %}
-            {% if member.batch == "Y19" %}
-                <div class="col-12 col-md-6 mb-2">
-                    <div class="card border-0">
-                        {% if member.image_path %}
-                        <img alt="{{ member.name }}" class="img-fluid mb-2 card-img-top" src="{{ site.baseurl }}{{ member.image_path }}" />
-                        {% endif %}
-                        <div class="card-body text-center" style="padding: 0px;">
-                            <h4 class="card-title mb-0" style="padding-bottom: 10px; margin: 10px;">{{ member.name }}</h4>
-                            <h6 class="card-text">{{ member.batch }} {{ member.info }}</h6>
-                            <ul class="list-inline text-center" style="margin: 0;">
-                                <li class="list-inline-item">
-                                <a target="_blank" href="https://facebook.com/{{ member.facebook }}" title="Facebook">
-                                    <span class="fa-stack fa-lg" aria-hidden="true">
-                                    <i class="fab fa-facebook fa-stack-1x"></i>
-                                    </span>
-                                </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a target="_blank" href="https://instagram.com/{{ member.insta }}" title="Instagram">
-                                        <span class="fa-stack fa-lg" aria-hidden="true">
-                                        <i class="fab fa-instagram fa-stack-1x"></i>
-                                        </span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>                
-                    </div>
-                </div>
-            {% endif %}
-        {% endfor %}
-    </div>
 </div>
 
-<h3 style="text-align: center;">Ex-Coordinators (2020-21)</h3><br>
+<h3 style="text-align: center">Ex-Coordinators (2022-23)</h3>
+<br />
 
 <div class="container pt-6 pb-6">
-    <div class="row pt-6 pb-6">
-        {% for member in site.team %}
-            {% if member.batch == "Y18" %}
-                <div class="col-12 col-md-6 mb-2">
-                    <div class="card border-0">
-                        {% if member.image_path %}
-                        <img alt="{{ member.name }}" class="img-fluid mb-2 card-img-top" src="{{ site.baseurl }}{{ member.image_path }}" />
-                        {% endif %}
-                        <div class="card-body text-center" style="padding: 0px;">
-                            <h4 class="card-title mb-0" style="padding-bottom: 10px; margin: 10px;">{{ member.name }}</h4>
-                            <h6 class="card-text">{{ member.batch }} {{ member.info }}</h6>
-                            <ul class="list-inline text-center" style="margin: 0;">
-                                <li class="list-inline-item">
-                                <a target="_blank" href="https://facebook.com/{{ member.facebook }}" title="Facebook">
-                                    <span class="fa-stack fa-lg" aria-hidden="true">
-                                    <i class="fab fa-facebook fa-stack-1x"></i>
-                                    </span>
-                                </a>
-                                </li>
-                                <li class="list-inline-item">
-                                    <a target="_blank" href="https://instagram.com/{{ member.insta }}" title="Instagram">
-                                        <span class="fa-stack fa-lg" aria-hidden="true">
-                                        <i class="fab fa-instagram fa-stack-1x"></i>
-                                        </span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>                
-                    </div>
-                </div>
-            {% endif %}
-        {% endfor %}
+  <div class="row pt-6 pb-6">
+    {% for member in site.team %} {% if member.batch == "Y20" %}
+    <div class="col-12 col-md-6 mb-2">
+      <div class="card border-0">
+        {% if member.image_path %}
+        <img
+          loading="lazy"
+          alt="{{ member.name }}"
+          class="img-fluid mb-2 card-img-top"
+          src="{{ site.baseurl }}{{ member.image_path }}"
+        />
+        {% endif %}
+        <div class="card-body text-center" style="padding: 0px">
+          <h4
+            class="card-title mb-0"
+            style="padding-bottom: 10px; margin: 10px"
+          >
+            {{ member.name }}
+          </h4>
+          <h6 class="card-text">{{ member.batch }} {{ member.info }}</h6>
+          <ul class="list-inline text-center" style="margin: 0">
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://facebook.com/{{ member.facebook }}"
+                title="Facebook"
+              >
+                <span class="fa-stack fa-lg" aria-hidden="true">
+                  <i class="fab fa-facebook fa-stack-1x"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://instagram.com/{{ member.insta }}"
+                title="Instagram"
+              >
+                <span class="fa-stack fa-lg" aria-hidden="true">
+                  <i class="fab fa-instagram fa-stack-1x"></i>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
+    {% endif %} {% endfor %}
+  </div>
+</div>
+
+<h3 style="text-align: center">Ex-Coordinators (2021-22)</h3>
+<br />
+
+<div class="container pt-6 pb-6">
+  <div class="row pt-6 pb-6">
+    {% for member in site.team %} {% if member.batch == "Y19" %}
+    <div class="col-12 col-md-6 mb-2">
+      <div class="card border-0">
+        {% if member.image_path %}
+        <img
+          loading="lazy"
+          alt="{{ member.name }}"
+          class="img-fluid mb-2 card-img-top"
+          src="{{ site.baseurl }}{{ member.image_path }}"
+        />
+        {% endif %}
+        <div class="card-body text-center" style="padding: 0px">
+          <h4
+            class="card-title mb-0"
+            style="padding-bottom: 10px; margin: 10px"
+          >
+            {{ member.name }}
+          </h4>
+          <h6 class="card-text">{{ member.batch }} {{ member.info }}</h6>
+          <ul class="list-inline text-center" style="margin: 0">
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://facebook.com/{{ member.facebook }}"
+                title="Facebook"
+              >
+                <span class="fa-stack fa-lg" aria-hidden="true">
+                  <i class="fab fa-facebook fa-stack-1x"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://instagram.com/{{ member.insta }}"
+                title="Instagram"
+              >
+                <span class="fa-stack fa-lg" aria-hidden="true">
+                  <i class="fab fa-instagram fa-stack-1x"></i>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    {% endif %} {% endfor %}
+  </div>
+</div>
+
+<h3 style="text-align: center">Ex-Coordinators (2020-21)</h3>
+<br />
+
+<div class="container pt-6 pb-6">
+  <div class="row pt-6 pb-6">
+    {% for member in site.team %} {% if member.batch == "Y18" %}
+    <div class="col-12 col-md-6 mb-2">
+      <div class="card border-0">
+        {% if member.image_path %}
+        <img
+          loading="lazy"
+          alt="{{ member.name }}"
+          class="img-fluid mb-2 card-img-top"
+          src="{{ site.baseurl }}{{ member.image_path }}"
+        />
+        {% endif %}
+        <div class="card-body text-center" style="padding: 0px">
+          <h4
+            class="card-title mb-0"
+            style="padding-bottom: 10px; margin: 10px"
+          >
+            {{ member.name }}
+          </h4>
+          <h6 class="card-text">{{ member.batch }} {{ member.info }}</h6>
+          <ul class="list-inline text-center" style="margin: 0">
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://facebook.com/{{ member.facebook }}"
+                title="Facebook"
+              >
+                <span class="fa-stack fa-lg" aria-hidden="true">
+                  <i class="fab fa-facebook fa-stack-1x"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a
+                target="_blank"
+                href="https://instagram.com/{{ member.insta }}"
+                title="Instagram"
+              >
+                <span class="fa-stack fa-lg" aria-hidden="true">
+                  <i class="fab fa-instagram fa-stack-1x"></i>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    {% endif %} {% endfor %}
+  </div>
 </div>
