--- a/team.html
+++ b/team.html
@@ -72,7 +72,7 @@ subtitle: Feel free to contact any of us!
       <li>Anushri Bhargawa</li>
       <li>Arpita Chaurasia</li>
       <li>Arram Siri Chandana</li>
-      <li>Arya Soratel</li>
+      <li>Arya Sorate</li>
       <li>Astitva Roy</li>
       <li>Ayush Bokad</li>
       <li>Harshit Kumar</li>
@@ -83,7 +83,6 @@ subtitle: Feel free to contact any of us!
       <li>Nilay Agarwal</li>
       <li>Paaritosh Jainl</li>
       <li>Shivam Lal</li>
-      <li>Siddhant Lalpuria</li>
       <li>Sohel Saini</li>
       <li>Sujal Jain</li>
       <li>Tanish Singla</li>
