fix resources formatting

--- a/_resources/wordpress.html
+++ b/_resources/wordpress.html
@@ -4,5 +4,5 @@ button-text: wordpress
 ---
 
 <script>
-    window.location.href = "https://astroclubiitk.wordpress.com/";
+  window.location.href = 'https://astroclubiitk.wordpress.com/'
 </script>
