--- a/_resources/ppts-archive.html
+++ b/_resources/ppts-archive.html
@@ -4,5 +4,6 @@ button-text: ppts archive
 ---
 
 <script>
-    window.location.href = "https://drive.google.com/drive/folders/18XVbcQcYXaY1wv3myY_tjeK3KH6bHDcV?usp=sharing";
+  window.location.href =
+    'https://drive.google.com/drive/folders/18XVbcQcYXaY1wv3myY_tjeK3KH6bHDcV?usp=sharing'
 </script>
