--- a/_resources/stargazers-manual.html
+++ b/_resources/stargazers-manual.html
@@ -4,5 +4,5 @@ button-text: stargazer's manual
 ---
 
 <script>
-    window.location.href = "/assets/docs/stargazers-manual.pdf";
+  window.location.href = '/assets/docs/stargazers-manual.pdf'
 </script>
