fixed links and text

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ our forefathers. Summarising in points, we conduct:-
   </li>
 
   <li>
-    <h4>Observatory for Astronomical Research (OAAR)</h4>
+    <h4>Observatory Automation for Astronomical Research (OAAR)</h4>
     Astronomy Club, IITK, has built its own observatory for astronomical
     research. It hosts a mammoth <b>14 inch Celestron EdgeHD</b>, which brings
     the Heavens down to earth. The observatory was inaugurated in Summers '14.
@@ -100,7 +100,7 @@ our forefathers. Summarising in points, we conduct:-
 <br /><br />
 
 <hr class="large" />
-<h1>Cygnus: First Edition 🌠</h1>
+<h1>Cygnus: Annual Club Magazine 🌠</h1>
 <br />
 
 Astronomy Club IITK proudly releases its annual astronomy magazine, Cygnus every
