--- a/team.html
+++ b/team.html
@@ -81,7 +81,7 @@ subtitle: Feel free to contact any of us!
       <li>Mohit Rajpoot</li>
       <li>Naman Agarwal</li>
       <li>Nilay Agarwal</li>
-      <li>Paaritosh Jainl</li>
+      <li>Paaritosh Jain</li>
       <li>Shivam Lal</li>
       <li>Sohel Saini</li>
       <li>Sujal Jain</li>
