added team info

--- a/team.html
+++ b/team.html
@@ -51,6 +51,30 @@ subtitle: Feel free to contact any of us!
                 </span>
               </a>
             </li>
+          </li>
+          <li class="list-inline-item">
+            <a
+              target="_blank"
+              href="mailto:{{ member.email }}"
+              title="Instagram"
+            >
+              <span class="fa-stack fa-lg" aria-hidden="true">
+                <i class="fas fa-envelope fa-stack-1x"></i>
+              </span>
+            </a>
+          </li>
+        </li>
+        <li class="list-inline-item">
+          <a
+            target="_blank"
+            href="https://github.com/{{ member.github }}"
+            title="Github"
+          >
+            <span class="fa-stack fa-lg" aria-hidden="true">
+              <i class="fab fa-github fa-stack-1x"></i>
+            </span>
+          </a>
+        </li>
           </ul>
         </div>
       </div>
