updated team list

--- a/team.html
+++ b/team.html
@@ -293,27 +293,41 @@ subtitle: Feel free to contact any of us!
   </tr>
   <tr>
     <th style="text-align: center; color: white; background-color: black; border-color: white">21.</th>
+    <td style="text-align: center; color: white; background-color: black; border-color: white">Srisha Singh</td>
+    <td style="text-align: center; color: white; background-color: black; border-color: white">Materials Science and Engineering</td>
+    <td style="text-align: center; color: white; background-color: black; border-color: white">Y22</td>
+    <td style="text-align: center; color: white; background-color: black; border-color: white"><a href="mailto:srishas22@iitk.ac.in">srishas22@iitk.ac.in</a></td>
+  </tr>
+  <tr>
+    <th style="text-align: center; color: white; background-color: black; border-color: white">22.</th>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Sujal Jain</td>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Chemical Engineering</td>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Y22</td>
     <td style="text-align: center; color: white; background-color: black; border-color: white"><a href="mailto:sujalj22@iitk.ac.in">sujalj22@iitk.ac.in</a></td>
   </tr>
   <tr>
-    <th style="text-align: center; color: white; background-color: black; border-color: white">22.</th>
+    <th style="text-align: center; color: white; background-color: black; border-color: white">23.</th>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Tanish Singla</td>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Physics</td>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Y22</td>
     <td style="text-align: center; color: white; background-color: black; border-color: white"><a href="mailto:tanishs22@iitk.ac.in">tanishs22@iitk.ac.in</a></td>
   </tr>
   <tr>
-    <th style="text-align: center; color: white; background-color: black; border-color: white">23.</th>
+    <th style="text-align: center; color: white; background-color: black; border-color: white">24.</th>
+    <td style="text-align: center; color: white; background-color: black; border-color: white">Thallapally Meghana</td>
+    <td style="text-align: center; color: white; background-color: black; border-color: white">Civil Engineering</td>
+    <td style="text-align: center; color: white; background-color: black; border-color: white">Y22</td>
+    <td style="text-align: center; color: white; background-color: black; border-color: white"><a href="mailto:tmeghana22@iitk.ac.in">tmeghana22@iitk.ac.in</a></td>
+  </tr>
+  <tr>
+    <th style="text-align: center; color: white; background-color: black; border-color: white">25.</th>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Vanshika Yadav</td>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Biological Sciences and Bioengineering</td>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Y22</td>
     <td style="text-align: center; color: white; background-color: black; border-color: white"><a href="mailto:vanshika22@iitk.ac.in">vanshika22@iitk.ac.in</a></td>
   </tr>
   <tr>
-    <th style="text-align: center; color: white; background-color: black; border-color: white">24.</th>
+    <th style="text-align: center; color: white; background-color: black; border-color: white">26.</th>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Yeleena Vimal</td>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Biological Sciences and Bioengineering</td>
     <td style="text-align: center; color: white; background-color: black; border-color: white">Y22</td>
